// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`services/msearch/functions serializeSubscriptions 1`] = `
Array [
  Object {
    "action": "action",
    "email": "foo@example.com",
  },
]
`;

exports[`services/msearch/functions serializeSubscriptions with moveExisting 1`] = `
Array [
  Object {
    "action": "action",
    "email": "foo@example.com",
    "move_existing": true,
  },
]
`;
